Don't query for GL_CONTEXT_FLAGS if not at least OpenGL 3.0

Patch by Thomas Lübking.

BUG: 355522